[gd_scene load_steps=18 format=3 uid="uid://da2jrniviifbx"]

[ext_resource type="Script" path="res://Scripts/Scenes/AlexLLegaTierraFirme/alex_llega_casa.gd" id="1_rg6nd"]
[ext_resource type="PackedScene" uid="uid://btnlv2vwv2vd8" path="res://Scenes/Characters/player/player.tscn" id="2_ertbp"]
[ext_resource type="Script" path="res://Scripts/Camera/MainCamera.gd" id="3_x82xn"]
[ext_resource type="Script" path="res://Scenes/Levels/Interactable.gd" id="4_r181p"]
[ext_resource type="PackedScene" uid="uid://berwh4wig5kda" path="res://Scenes/UI/PressableButton.tscn" id="5_3nty1"]
[ext_resource type="Texture2D" uid="uid://bf3m17lil5nbu" path="res://Assets/Sprites/World/Bed.svg" id="6_epwyq"]
[ext_resource type="Texture2D" uid="uid://csn08kqxj3iks" path="res://Assets/Sprites/World/WoodFloor.svg" id="7_1lai8"]
[ext_resource type="Script" path="res://Scripts/Camera/CameraTransitions.gd" id="8_8mp5e"]
[ext_resource type="Texture2D" uid="uid://bk6kh4mgdnexq" path="res://Assets/Sprites/World/Desk.svg" id="9_1fuxl"]
[ext_resource type="Texture2D" uid="uid://c537oy166ws7i" path="res://Assets/Sprites/Chair.svg" id="10_fg3o6"]
[ext_resource type="Texture2D" uid="uid://cpcd2tmxsik5m" path="res://Assets/Sprites/Door.svg" id="11_cqkol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4faq"]
size = Vector2(31.2, 27.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aphov"]
size = Vector2(14.6, 27.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nen01"]
size = Vector2(22.8, 21.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr5qe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbr2k"]
size = Vector2(393, 292)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrsc"]
size = Vector2(764, 292)

[node name="World" type="Node2D"]
script = ExtResource("1_rg6nd")

[node name="Player" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("2_ertbp")]
position = Vector2(-177, -47)
camera_following = false
can_open_inventory = false
camera = NodePath("../MainCamera")

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(-175, -79)
zoom = Vector2(10, 10)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0
script = ExtResource("3_x82xn")

[node name="StaticInteractuables" type="Node" parent="."]

[node name="Sleeping" type="Area2D" parent="StaticInteractuables"]
position = Vector2(554, -84)
script = ExtResource("4_r181p")
interaction = 14
move_to = "res://Scenes/Levels/main.tscn"

[node name="Button" parent="StaticInteractuables/Sleeping" instance=ExtResource("5_3nty1")]
offset_left = -144.0
offset_top = -90.0
offset_right = -94.0
offset_bottom = -40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticInteractuables/Sleeping"]
position = Vector2(-46, -3.5)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_f4faq")

[node name="Label" type="Label" parent="StaticInteractuables/Sleeping"]
offset_left = -45.0
offset_top = -100.0
offset_right = 38.0
offset_bottom = -77.0
text = "
"
metadata/_edit_use_anchors_ = true

[node name="ExitingHome" type="Area2D" parent="StaticInteractuables"]
position = Vector2(-174, -75.23)
script = ExtResource("4_r181p")
interaction = 2
move_to = "res://Scenes/Levels/PrimerDia.tscn"

[node name="Button" parent="StaticInteractuables/ExitingHome" instance=ExtResource("5_3nty1")]
offset_left = 11.0
offset_top = -90.0
offset_right = 61.0
offset_bottom = -40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticInteractuables/ExitingHome"]
position = Vector2(-4.49998, -3.5)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_aphov")

[node name="Label" type="Label" parent="StaticInteractuables/ExitingHome"]
offset_left = -45.0
offset_top = -100.0
offset_right = 38.0
offset_bottom = -77.0
text = "
"
metadata/_edit_use_anchors_ = true

[node name="OpeningDiary" type="Area2D" parent="StaticInteractuables"]
position = Vector2(-547, -75)
script = ExtResource("4_r181p")
interaction = 4
move_to = "res://Scenes/Levels/main.tscn"

[node name="Button" parent="StaticInteractuables/OpeningDiary" instance=ExtResource("5_3nty1")]
offset_left = 55.0
offset_top = -63.0
offset_right = 105.0
offset_bottom = -13.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticInteractuables/OpeningDiary"]
position = Vector2(16, 13)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_nen01")

[node name="Label" type="Label" parent="StaticInteractuables/OpeningDiary"]
offset_left = -45.0
offset_top = -100.0
offset_right = 38.0
offset_bottom = -77.0
text = "
"
metadata/_edit_use_anchors_ = true

[node name="Backrgound" type="ColorRect" parent="."]
z_index = -50
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1500.0
offset_top = -1000.0
offset_right = 1500.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackrgoundHouse" type="ColorRect" parent="."]
z_index = -40
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -606.0
offset_top = -326.0
offset_right = 602.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.0392157, 0.113725, 1)

[node name="Bed" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(507, -45)
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_epwyq")

[node name="Walls" type="Node" parent="."]

[node name="InvisibleWall-r" type="StaticBody2D" parent="Walls"]
position = Vector2(600, -159)
scale = Vector2(1, 16.165)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/InvisibleWall-r"]
shape = SubResource("RectangleShape2D_gr5qe")

[node name="Floor2" type="Sprite2D" parent="Walls/InvisibleWall-r"]
z_index = 50
position = Vector2(-1.51992e-05, 1.34991e-05)
scale = Vector2(0.00188858, 0.0588236)
texture = ExtResource("7_1lai8")

[node name="Roof" type="StaticBody2D" parent="Walls"]
position = Vector2(-4.54747e-13, -321)
rotation = 1.5708
scale = Vector2(1, 61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Roof"]
shape = SubResource("RectangleShape2D_gr5qe")

[node name="Floor2" type="Sprite2D" parent="Walls/Roof"]
z_index = 50
position = Vector2(-1.51992e-05, 1.34991e-05)
scale = Vector2(0.00188858, 0.0588236)
texture = ExtResource("7_1lai8")

[node name="InvisibleWall-r2" type="StaticBody2D" parent="Walls"]
position = Vector2(185, -251)
scale = Vector2(1, 7.115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/InvisibleWall-r2"]
shape = SubResource("RectangleShape2D_gr5qe")

[node name="Floor2" type="Sprite2D" parent="Walls/InvisibleWall-r2"]
z_index = 50
position = Vector2(-1.51992e-05, 1.34991e-05)
scale = Vector2(0.00188858, 0.0588236)
texture = ExtResource("7_1lai8")

[node name="InvisibleWall-l" type="StaticBody2D" parent="Walls"]
position = Vector2(-600, -159)
scale = Vector2(1, 16.165)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/InvisibleWall-l"]
shape = SubResource("RectangleShape2D_gr5qe")

[node name="Floor2" type="Sprite2D" parent="Walls/InvisibleWall-l"]
z_index = 50
position = Vector2(-1.51992e-05, 1.34991e-05)
scale = Vector2(0.00188858, 0.0588236)
texture = ExtResource("7_1lai8")

[node name="Roof2" type="StaticBody2D" parent="Walls"]
position = Vector2(-1.0842e-19, -6)
rotation = 1.5708
scale = Vector2(1, 61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Roof2"]
shape = SubResource("RectangleShape2D_gr5qe")

[node name="Floor2" type="Sprite2D" parent="Walls/Roof2"]
z_index = 50
position = Vector2(-1.51992e-05, 1.34991e-05)
scale = Vector2(0.00188858, 0.0588236)
texture = ExtResource("7_1lai8")

[node name="CameraTriggers" type="Node" parent="."]

[node name="BedroomCamera" type="Area2D" parent="CameraTriggers"]
position = Vector2(393, -159)
script = ExtResource("8_8mp5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTriggers/BedroomCamera"]
position = Vector2(-1.5, -6)
shape = SubResource("RectangleShape2D_dbr2k")

[node name="Camera" type="Camera2D" parent="CameraTriggers/BedroomCamera"]
enabled = false
zoom = Vector2(2.9, 2.9)

[node name="LivingCamera" type="Area2D" parent="CameraTriggers"]
position = Vector2(-205, -159)
script = ExtResource("8_8mp5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTriggers/LivingCamera"]
position = Vector2(-3, -6)
shape = SubResource("RectangleShape2D_uwrsc")

[node name="Camera" type="Camera2D" parent="CameraTriggers/LivingCamera"]
offset = Vector2(0, -81.9)
enabled = false
zoom = Vector2(2.015, 2.015)

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(-552, -34)
scale = Vector2(0.309394, 0.360122)
texture = ExtResource("9_1fuxl")

[node name="Chair" type="Sprite2D" parent="."]
position = Vector2(-509.474, -54.2092)
scale = Vector2(-0.0822132, 0.0965214)
texture = ExtResource("10_fg3o6")

[node name="Door" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(-178, -79)
scale = Vector2(0.14, 0.14)
texture = ExtResource("11_cqkol")
